--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,3 +1,23 @@
+nav {
+    height: 56px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #3f51b5;
+    box-shadow: 0 5px 10px #ccc;
+  }
+  
+  /* Basic styles for nav links */
+  nav a {
+    display: flex;
+    align-items: center;
+    padding-left: 30px;
+    padding-right: 30px;
+    height: 100%;
+    text-decoration: none;
+  }
+
+
 .link-inactive {
     color: red;
     }
@@ -6,3 +26,8 @@
     color: black;
     background: orange;
     }
+
+    .content {
+        margin-top: 50px;
+        text-align: center;
+      }
