header file updated

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -18,16 +18,18 @@ nav {
   }
 
 
+/* Specific styles for non-active links */
 .link-inactive {
-    color: red;
-    }
-    /* Specific styles for active links */
-    .link-active {
+    color: white;
+  }
+  
+  /* Specific styles for active links */
+  .link-active {
     color: black;
     background: orange;
-    }
+  }
 
-    .content {
-        margin-top: 50px;
-        text-align: center;
-      }
+  .content {
+    margin-top: 50px;
+    text-align: center;
+  }
